# OperatorShifting

./: CMakeLists.txt  README.md  augmentation.cpp  augmentation.h  auxAugmentation.cpp  auxAugmentation.h  auxDiagnostics.h  config.json  config_default.json  dgnAsymMarkov.cpp  dgnGraphEdgeDrop.cpp  dgnGraphEdgePerturb.cpp  dgnGridLaplacian1D.cpp  dgnGridLaplacian2D.cpp  dgnMeshLaplacian.cpp  diagnostics.cpp  diagnostics.h  graphlap.cpp  graphlap.h  hfe.cpp  hfe.h  json.hpp  main.cpp  matutil.cpp  matutil.h  meshlap.cpp  meshlap.h  results.txt  testbeds.h
CMakeModules/: FindLEMON.cmake  FindSUPERLU.cmake
Graphs/fb-pages-company/: fb-pages-company-weighted.edges
Graphs/fb-pages-food/: fb-pages-food-weighted.edges
Meshes/: bunny_low.json  cube.json
include/opshift/: diagnostics.h  graphlap.h  matutil.h  opshift.h  tests.h
src/: diagnostics.cpp  energyopshift.cpp  graphlap.cpp  matutil.cpp  opshift.cpp  residualopshift.cpp
tests/: CMakeLists.txt
tests/asymMarkov/: CMakeLists.txt  dgnAsymMarkov.cpp
tests/graphEdgeDrop/: CMakeLists.txt  dgnGraphEdgeDrop.cpp
tests/graphEdgePerturb/: CMakeLists.txt  dgnGraphEdgePerturb.cpp
tests/gridLaplacian1D/: CMakeLists.txt  dgnGridLaplacian1D.cpp
tests/gridLaplacian2D/: CMakeLists.txt  dgnGridLaplacian2D.cpp
